--- a/index.html
+++ b/index.html
@@ -75,10 +75,15 @@
             <i style="color:sienna;font-size: smaller;">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Talk is cheap, life is short, show me the data, and the code.
             </i>
-
         </h2>
-        <hr /> <br>
-        <div class="lead"> I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
+        <hr />
+        <div class="lead">
+            <br>
+            <i style="color: steelblue"> About academia, what I like most is the positive state it brings to people. I have talked with academics
+                in their 70s , in their 50s, and those much younger than me. But I never felt the age gap. Everyone
+                comes across as up to date, young and energetic. <br>
+            </i><br>
+            I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
             Jilin University
             School of Economics in 2016. I am hooked on corporate finance, financial economics, behavioural finance,
             cooking, and diet
@@ -168,7 +173,7 @@
             </strong>
         </h3>
         <ol>
-            <li class="lead">CEO Homebias and M&A.
+            <li class="lead">CEO Home bias and M&A.
                 <p style="font-size: large; font-style: italic;">with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
                     (Durham) </p>
             </li>
