--- a/Links.html
+++ b/Links.html
@@ -186,6 +186,10 @@
                 <li style="font-size: large;">
                     <a href="http://public.kenan-flagler.unc.edu/faculty/kuhnenc/RESEARCH/research.html">Prof Camelia M. Kuhnen</a> (with U. of North Carolina Chapel Hill, US CEO turnover data, related to her JFE 2013 paper)
                 </li>
+                
+                <li style="font-size: large;">
+                    <a href="http://faculty.haas.berkeley.edu/stanton/texintro/">Prof Richard Stanton</a> (with UCB Haas, <strong>LaTex templates</strong> for finance papers, including JF, JFE, RFS styles)
+                </li>
             </ul>
 
 
