--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
     <br>
 
     <div class="text-center">
-        <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg"
-            alt="Corporate Finance">
+        <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/yadian.jpg"
+            alt="yadian" height="300" width="400" >
     </div>
 
 
