--- a/CN.html
+++ b/CN.html
@@ -171,6 +171,9 @@
             <li class="lead">课程助教 (习题课讲师). <em>ECON2181 金融计量学导论</em>
                 (2021年10月- 2021年12月)<p style="font-size: large; font-style: italic;">学生评分: 4.54/5.0 </p>
             </li>
+            <li class="lead">课程助教 (习题课讲师). <em>ECON2191 公司金融学</em>
+                (2022年10月- )<p style="font-size: large; font-style: italic;"> </p>
+            </li>
 
         </ol>
         <br><br>
