--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
                 (Oct 2021-Dec
                 2021)<p style="font-size: large; font-style: italic;">Student Evaluation Score: 4.54/5.0 </p>
             </li>
+            <li class="lead">Teaching Assitant (Seminar Tutor). <em>ECON2191 Corporate Finance</em>
+                (Oct 2022-)<p style="font-size: large; font-style: italic;"> </p>
+            </li>
 
         </ol>
 
