--- a/CN.html
+++ b/CN.html
@@ -176,6 +176,23 @@
             </li>
 
         </ol>
+        <br>
+
+        
+        <h3>
+            <strong>
+               其他研究
+            </strong>
+        </h3>
+
+        <ol>
+            <li class="lead">
+                <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/chenyangfinance/uk_driving_test_paper/main/UK_Driving.pdf" target="_blank">英国汽车驾照考试的通过率：数据分析</a>
+                <p style="font-size: large; font-style: italic;">with Yifei Bi (萨里商学院)
+            </li>
+      
+        </ol>
+
         <br><br>
         <h3>
             <strong>
