--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </strong>
         </h3>
         <ol>
-            <li class="lead">CEO Home bias and M&A.
+            <li class="lead">CEO Home Bias and M&A.
                 <p style="font-size: large; font-style: italic;">with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
                     (Durham) </p>
             </li>
@@ -197,7 +197,21 @@
             </li>
 
         </ol>
+        <br>
 
+        <h3>
+            <strong>
+               Other Research
+            </strong>
+        </h3>
+
+        <ol>
+            <li class="lead">
+                <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/chenyangfinance/uk_driving_test_paper/main/UK_Driving.pdf" target="_blank">Driving Test Pass Rates in The UK: Data Analysis</a>
+                <p style="font-size: large; font-style: italic;">with Yifei Bi (Surrey Business School)
+            </li>
+      
+        </ol>
     </div>
     <br>
     <br>
