--- a/CN.html
+++ b/CN.html
@@ -78,7 +78,7 @@
         </h2>
         <hr /> <br>
         <div class="lead" style="font-size: x-large; ">
-            我是一名金融学的三年级博士研究生。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。让我感到开心的事物：公司金融学，金融经济学，行为金融学，烹饪，和健怡可乐。
+            我将于2023年8月加入格拉斯哥大学亚当斯密商学院担任博士后研究员。我在2023年取得英国杜伦大学的金融学博士学位。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。让我感到开心的事物：公司金融学，金融经济学，行为金融学，烹饪，和健怡可乐。
         </div>
         <br>
         <h3>
@@ -89,7 +89,7 @@
         <ul class="list-unstyled">
 
             <li class="lead">
-                博士研究生，金融学 (奖学金), 杜伦大学商学院 (2020年12月 - );
+                博士研究生，金融学 (商学院奖学金), 杜伦大学商学院 (2020年12月 - );
                 <div><em> &nbsp;&nbsp;&nbsp;&nbsp;导师: <a
                             href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                             Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof
