--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
         <hr />
         <div class="lead">
             <br>
-            I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
+            <i style="color: steelblue"> About academia, what I like most is the positive state it brings to people. I have talked with academics
+                in their 70s , in their 50s, and those much younger than me. But I never felt the age gap. Everyone
+                comes across as up to date, young and energetic. <br>
+            </i><br>
+            I am going to join Adam Smith Business School, University of Glasgow as a Post-Doc Research Fellow in August 2023. I obtained my PhD degree at Durham University Business School in 2023. I graduated from Leeds University Business School in 2018 and
             Jilin University
             School of Economics in 2016. I am hooked on corporate finance, financial economics, behavioural finance,
             cooking, and diet
