--- a/index.html
+++ b/index.html
@@ -78,11 +78,6 @@
         </h2>
         <hr />
         <div class="lead">
-            <br>
-            <i style="color: steelblue"> About academia, what I like most is the positive state it brings to people. I have talked with academics
-                in their 70s , in their 50s, and those much younger than me. But I never felt the age gap. Everyone
-                comes across as up to date, young and energetic. <br>
-            </i><br>
             I am going to join Adam Smith Business School, University of Glasgow as a Post-Doc Research Fellow in August 2023. I obtained my PhD degree at Durham University Business School in 2023. I graduated from Leeds University Business School in 2018 and
             Jilin University
             School of Economics in 2016. I am hooked on corporate finance, financial economics, behavioural finance,
@@ -101,7 +96,7 @@
         <ul class="list-unstyled">
 
             <li class="lead">
-                PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- );
+                PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- April 2023);
                 <div><em> &nbsp;&nbsp;&nbsp;&nbsp;Supervisors: <a
                             href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                             Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof
