--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul class="list-unstyled">
 
             <li class="lead">
-                PhD Student in Finance (Scholarship), Durham University Business School (Dec 2020- April 2023);
+                PhD in Finance (Scholarship), Durham University Business School (Dec 2020- April 2023);
                 <div><em> &nbsp;&nbsp;&nbsp;&nbsp;Supervisors: <a
                             href="https://www.durham.ac.uk/staff/business-staff/dimitris-petmezas/">
                             Prof Dimitris Petmezas</a>, <a href="https://www.dur.ac.uk/directory/profile/?id=4072">Prof
